--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </li>
       <li>
         <a href="https://www.facebook.com/settings" target="_blank">
-          <img src="Facebook-logo.jpg" alt="Facebook" class="social-logo">
+          <img src="Facebook-logo.jpg" alt="Facebook" class="social-logo"
         </a>
       </li>
     </ul>
