--- a/index.html
+++ b/index.html
@@ -45,5 +45,31 @@
     <div>
       <a href="mailto:ducaqabe@gmail.com" class="apply">Apply</a>
       <h3 class="job-role"> Forex Trader </h3>
-      <span class="experience">Knowledgeable in foreign exchange markets with hands
+      <span class="experience">Knowledgeable in foreign exchange markets with hands-on experience in trading strategies,
+        technical analysis, and risk management.</span>
+    </div>
+  </div>
+
+  <div id="footer">
+    <ul id="footer-links">
+      <li>
+        <a href="https://www.instagram.com/mohamed_abdilkarem/profilecard/?igsh=MW9tNWU0Y2hscWE0Zg==" target="_blank">
+          <img src="instagram-logo.jpg" alt="Instagram" class="social-logo">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/mohamad-abdikarim-23452a324/" target="_blank">
+          <img src="linkedin-logo.jpg" alt="LinkedIn" class="social-logo">
+        </a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/settings" target="_blank">
+          <img src="Facebook-logo.jpg" alt="Facebook" class="social-logo"
+        </a>
+      </li>
+    </ul>
+    <span class="copyright"> © 2024 pedrudiin</span>
+  </div>
+</body>
+
 
