--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </a>
       </li>
       <li>
-        <a href="https://www.facebook.com/settings" target="_blank">
-          <img src=="Facebook-logo.jpg" alt="Facebook" class="social-logo">
+        <a href="https://www.Facebook.com/settings" target="_blank">
+          <img src="Facebook-logo.jpg" alt="Facebook" class="social-logo">
         </a>
       </li>
     </ul>
@@ -87,6 +87,6 @@
   </div>
 </body>
 
-</html>s
+</html>
 
 
