--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>My First Web Page</title>
+  <title>welcome to mohamed's portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
